Data de criação: 10/10/2021
Data de atualização: 01/12/2021
Versão: 0.17
Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64

============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
01/12/2021 - Robson Vaamonde - Customização do script: 16-fusioninventory.sh integrado com o GLPI, atualização das
versões do FusionInventory Server e Agent, atualização da variável $PATHTFTP no script: 06-tftphpa.sh.

30/11/2021 - Robson Vaamonde - Melhoria na documentação do arquivo: 00-parametros.sh adicionando as informações dos
arquivos de configuração utilizados em cada script, melhoria na documentação do arquivo de virtual host: glpi.conf, 
atualização da versão do PHP 7.4 no arquivo de agendamento: glpi.cron, retirado do script: 15-glpi.sh as dependências
do PHP: php-recode php-xsl php-gettext php-iconv (analisando se essas dependências vai afetar diretamente o GLPI),
adicionado no script: 05-ntp.sh a edição do arquivo de configuração: dhcpd.conf, criação da bloco de verificação If
em todos os script para checar se o script já foi executado mais de uma vez no servidor, acréscimo da verificação de
dependência do script: 01-openssh.sh para checar se o openssh-client está instalado, mudança do script: 12-webmin.sh
agora trabalhando com source.list (webmin.list) recomendado pelo projeto não baixar o binário do site oficial (devido 
a lentidão no Download dos arquivos binários do Webmin, Usermin e Virtualmin) com isso o Webmin sempre será atualizado
pelo Apt,  

26/11/2021 - Robson Vaamonde - Acréscimo da linha: option wpad "http://172.16.1.20/wpad.dat"; no arquivo de configuração
dhcpd.conf para suporte o protocolo WPAD (Web Proxy Autodiscovery Protocol), criação do CNAME: wpad no arquivo de
configuração pti.intra.hosts

25/11/2021 - Robson Vaamonde - Customização do script 15-glpi.sh e criação das variáveis no arquivo 00-parametros.sh,
correções de PT-BR no arquivo 14-loganalyzer.sh.
