@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 26/10/2021
-# Versão: 0.03
+# Data de atualização: 01/12/2021
+# Versão: 0.04
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 # Configurações Globais do ISC DHCP Server
@@ -24,7 +24,7 @@ update-conflict-detection off;
 default-lease-time 14400;
 max-lease-time 18000;
 #
-# Configuração do Log do ISC DHCP Server
+# Configuração do Log do ISC DHCP Server em relação ao Rsyslog
 log-facility local7;
 #
 # Configuração do protocolo WPAD (Web Proxy Autodiscovery Protocol) do ISC DHCP Server
@@ -37,7 +37,8 @@ ddns-updates on;
 ddns-update-style interim;
 option domain-name "pti.intra";
 ddns-domainname "pti.intra.";
-ddns-rev-domainname "in-addr.arpa.";
+ddns-rev-domainname "1.16.172.in-addr.arpa.";
+#ddns-rev-domainname "in-addr.arpa.";
 #
 # Configuração da chave de autenticação entre Bind9 DNS Server e o ISC DHCP Server
 # Chave gerada com o comando: dnssec-keygen -r /dev/urandom -a HMAC-MD5 -b 128 -n USER vaamonde
